XIVY-13006 Fix OperationNotSupportedException when sorting JFR, SecSyst
Sorting table in views JFR and Security System throws an
OperationNotSuportedException